s/www.xmms2.org/legacy.xmms2.org/
Levitation import of page 2623 rev 9343.

--- a/0-/Manifesto for a Better Music Player.mediawiki
+++ b/0-/Manifesto for a Better Music Player.mediawiki
@@ -7,11 +7,11 @@ No perfect music player exists yet.
 
 Apart from your grandma and deaf people, few people do ''not'' use computers to play music.  It has become part of the digital experience to listen to music while surfing/chatting/coding/gaming.  And yet, if you ask people, most of those who care the least bit about the usability of the programs they use will agree that no music player is perfect.
 
-Windows users will curse in frustration about the unwanted bloat of [http://www.winamp.com/ Winamp 5] or the pathetic hegemony of the lesser "default" player, [http://www.microsoft.com/windows/windowsmedia/ Windows Media Player].  MacOS X users will point at [http://www.apple.com/itunes/ iTunes] with great pride, only to confess that its monolithic perfection is actually spoiled by loads of frustrating details.  Unix users will gladly demonstrate their contempt over the most popular player, [http://www.xmms.org/ XMMS], a convenient but over-simplistic clone of the Winamp 2.* series.  There exist alternative players, but for the sake of argumentative generalisation, let's wrap it up this way: they all suck, in some way.
+Windows users will curse in frustration about the unwanted bloat of [http://www.winamp.com/ Winamp 5] or the pathetic hegemony of the lesser "default" player, [http://www.microsoft.com/windows/windowsmedia/ Windows Media Player].  MacOS X users will point at [http://www.apple.com/itunes/ iTunes] with great pride, only to confess that its monolithic perfection is actually spoiled by loads of frustrating details.  Unix users will gladly demonstrate their contempt over the most popular player, [http://legacy.xmms2.org/ XMMS], a convenient but over-simplistic clone of the Winamp 2.* series.  There exist alternative players, but for the sake of argumentative generalisation, let's wrap it up this way: they all suck, in some way.
 
 Maybe your 12-year-old sister does not languish for a better, more powerful music player.  Maybe ''you'' don't care about it either (in which case, it is time to close this tab and go back reading [http://www.thebestpageintheuniverse.net/ the best page in the universe]).  But if you think music players could use some improvement, read on.
 
-In this article, we will go through the history of music players, which will be split in three categories: the old playlist-based players (e.g. [http://www.xmms.org/ XMMS], early [http://www.winamp.com/ Winamp] versions), the present media-library-based players (e.g. [http://www.apple.com/itunes/ iTunes], [http://www.gnome.org/projects/rhythmbox/ Rhythmbox], [http://www.winamp.com/ Winamp 5]) and the alternative client/server-based players (e.g. [http://www.musicpd.org/ Music Player Daemon], [http://wiki.xmms2.xmms.se/ XMMS2]).  Studying this evolution and analysing the features of each generation should help us identify the flaws of current music players and design concepts that will bring music playing to a new level.
+In this article, we will go through the history of music players, which will be split in three categories: the old playlist-based players (e.g. [http://legacy.xmms2.org/ XMMS], early [http://www.winamp.com/ Winamp] versions), the present media-library-based players (e.g. [http://www.apple.com/itunes/ iTunes], [http://www.gnome.org/projects/rhythmbox/ Rhythmbox], [http://www.winamp.com/ Winamp 5]) and the alternative client/server-based players (e.g. [http://www.musicpd.org/ Music Player Daemon], [http://wiki.xmms2.xmms.se/ XMMS2]).  Studying this evolution and analysing the features of each generation should help us identify the flaws of current music players and design concepts that will bring music playing to a new level.
 
 ==Vocabulary==
 
@@ -31,7 +31,7 @@ In some players, the boundaries between these different concepts are blurred. Fo
 
 [[File:Manifesto_for_a_Better_Music_Player-xmms-simple-3-pane.png|thumb=Manifesto_for_a_Better_Music_Player-xmms-simple-3-pane-thumb.png|right|Classic 3-pane XMMS]]
 
-In the nineties, with the advent of Napster, CDs and fast personal computers, more and more people started to listen to music on their machine.  But due to the slowness of the 56k connections and the expensiveness of hard drives, they only had few files, usually a couple of hundreds.  Playlist-based players such as [http://www.winamp.com/ Winamp] (and its Unix equivalent, [http://www.xmms.org/ XMMS]) were suitable: loading files directly from the filesystem to a sequential list was manageable and the size of the library was small enough to be browsed linearly.
+In the nineties, with the advent of Napster, CDs and fast personal computers, more and more people started to listen to music on their machine.  But due to the slowness of the 56k connections and the expensiveness of hard drives, they only had few files, usually a couple of hundreds.  Playlist-based players such as [http://www.winamp.com/ Winamp] (and its Unix equivalent, [http://legacy.xmms2.org/ XMMS]) were suitable: loading files directly from the filesystem to a sequential list was manageable and the size of the library was small enough to be browsed linearly.
 
 Playlist saving/loading features made it possible to keep collections of songs, e.g. an album, a party playlist or songs of a given genre.  However, the process of saving/loading a physical file on the disk manually was cumbersome and not practical.  Moreover, the lists were static: you would have to update the "rock playlist" manually everytime you add a new rock song to your library...  These are the reasons why playlist files were not so popular among most users.
 
@@ -39,7 +39,7 @@ Playlist saving/loading features made it possible to keep collections of songs, 
 
 [[File:Manifesto_for_a_Better_Music_Player-xmms-jump-window.png|thumb=Manifesto_for_a_Better_Music_Player-xmms-jump-window-thumb.png|left|XMMS: Jump window]]
 
-The ''jump'' feature (the J key in [http://www.winamp.com/ Winamp] or [http://www.xmms.org/ XMMS]) is nothing but a hackish substitute for a decent search mechanism.  Basically, it involves looking for all song titles matching a string in the playlist; it is very fast and simple to use.  However, it quickly shows it limits when you want to look for all songs by a band called "M" or even "Air".  The other obvious limitation is that it only searches in the playlist, not the entire library, and it has no knowledge of the song metadata.
+The ''jump'' feature (the J key in [http://www.winamp.com/ Winamp] or [http://legacy.xmms2.org/ XMMS]) is nothing but a hackish substitute for a decent search mechanism.  Basically, it involves looking for all song titles matching a string in the playlist; it is very fast and simple to use.  However, it quickly shows it limits when you want to look for all songs by a band called "M" or even "Air".  The other obvious limitation is that it only searches in the playlist, not the entire library, and it has no knowledge of the song metadata.
 
 The ''random play'' feature helps break the linearity of the playlist by randomly selecting the next song to play.  Although this feature is very popular, it also has its limitations.  First, it is not possible to preview the random queue, meaning that you only discover what song you jump to when you start playing it.  Not very convenient if you want to avoid jumping to that shameful Britney song you had forgotten to erase.  The second shortcoming is that you cannot introduce a factor (rating, genre, etc) in the randomness: songs are randomly chosen from the whole playlist.
 
@@ -89,7 +89,7 @@ What merely sounds like a new feature actually pinpoints the major problem that 
 
 [[File:Manifesto_for_a_Better_Music_Player-madman-interface.png|thumb=Manifesto_for_a_Better_Music_Player-madman-interface-thumb.png|right|Madman interface]]
 
-[http://madman.sourceforge.net/ Madman] is an interesting music manager running on GNU/Linux.  It is mostly a media-library, as it uses [http://www.xmms.org/ XMMS] as a back-end player.  What is interesting about this project is that it does not try to copy any famous player, and is surprisingly successful in its own clever way.
+[http://madman.sourceforge.net/ Madman] is an interesting music manager running on GNU/Linux.  It is mostly a media-library, as it uses [http://legacy.xmms2.org/ XMMS] as a back-end player.  What is interesting about this project is that it does not try to copy any famous player, and is surprisingly successful in its own clever way.
 
 At first, the Qt interface looks a bit poor, with a disappointing tree widget to browse by artist or album. We notice that the interface is split in two: browse the library with filters and queries in the top pane, view the collections in the bottom pane.  The query features are very powerful (regular expressions, last time played, etc) and it is possible to bookmark a query from the browse pane into a new collection with a single button.  Neat.
 
@@ -157,7 +157,7 @@ Once the library has been browsed, the user has chosen songs to play and wants t
 
 Collections and playlists ought to be clearly separated and receive equal importance, for they represent two main orthogonal concept in music players.  Collections are unordered subsets of the library, meant to facilitate the browsing of a big library and build arbitrary groups of songs; they are not playable.  Playlists are ordered lists of songs, meant to be played linearly; they can be edited and reordered at any time.  Both collections and playlists are always editable (i.e. add/remove songs).  We will see later on that there are several ways to create playlists.
 
-When it comes to viewing, both concepts offer a different interface.  Collections are browsed in the same way as the library, through search and filters.  Actually, even the library is a collection, as it is just an alias for a top collection matching all the songs.  Playlists are browsed as a list, much the same way as you view the playlist in [http://www.xmms.org/ XMMS] or Winamp 2.*.
+When it comes to viewing, both concepts offer a different interface.  Collections are browsed in the same way as the library, through search and filters.  Actually, even the library is a collection, as it is just an alias for a top collection matching all the songs.  Playlists are browsed as a list, much the same way as you view the playlist in [http://legacy.xmms2.org/ XMMS] or Winamp 2.*.
 
 Collections are organized as a tree structure, playlists as a flat list. As an analogy, collections can be seen as directories, thus forming a hierarchy, whereas playlists can be seen as radio stations. There is always one and only one "playing" playlist at any given time, and usually only one collection browsed at a time as well.
 
