Levitation import of page 2228 rev 9347.

--- a/0-/Clients.mediawiki
+++ b/0-/Clients.mediawiki
@@ -118,7 +118,8 @@ You can find lots of other players in the [[Clientlist | Client matrix]]. Here a
 
 == Emacs ==
 
-* [[Client:lagn | lagn]] is a XMMS2 client for Emacs.
+* [[Client:GIMME | GIMME]] is an XMMS2 client for GNU Emacs with extra features.
+* [[Client:lagn | lagn]] is an XMMS2 client for GNU Emacs.
 
 = Special Input Methods =
 
