--- a/0-/Collections 2.0/TODO.mediawiki
+++ b/0-/Collections 2.0/TODO.mediawiki
@@ -83,3 +83,11 @@ I use the following to run the tests:
  fi
 
 The valgrind suppressions file can be found at: http://people.xmms2.org/~nano/x2.supp
+
+== test program ==
+
+Simple python app that eval()'s the top box to a collection, and json-parses the middle box into a fetch spec dict, and when the button underneath is pressed, the bottom box dumps the output of xmmsc_coll_query:
+
+http://c6a2166152571a9e.paste.se/
+
+http://c6a2166152571a9e.paste.se/
