--- a/0-/Collections 2.0/TODO.mediawiki
+++ b/0-/Collections 2.0/TODO.mediawiki
@@ -17,6 +17,10 @@ Cluster-list should have an order attribute, which would be a list of the same a
   }]
  }
 
+== src/tools/sqlite2s4 ==
+
+Currently tries to guess what metadata is int and can thus convert an artist or album name to integer if it happens to be a full integer match. This is wrong as it is possible to differentiate between integers and strings in the old media library.
+
 == src/xmms/collection.c ==
 
 We have something that emulates query_infos here, but it's broken. Should be unbroken and decided if it should live client side or server side. Moving it to client side has the benefit of removing apis from the protocol, and probably also in the case of query_infos results in less data transferred to the client... some applies to query_ids.
