--- a/0-/Collections 2.0/TODO.mediawiki
+++ b/0-/Collections 2.0/TODO.mediawiki
@@ -21,6 +21,10 @@ Cluster-list should have an order attribute, which would be a list of the same a
   }]
  }
 
+== src/xmms/xform.c ==
+
+xforms need a way to query the medialibrary, the same way they have methods for setting metadata. this is used in ices and ofa xforms, and is also of interest for output plugins like pulse audio that can update its metadata with currently playing song. this should probably be implemented in xmms2-devel.git first, and then ported to the S4/Coll2 branch.
+
 == src/tools/sqlite2s4 ==
 
 Currently tries to guess what metadata is int and can thus convert an artist or album name to integer if it happens to be a full integer match. This is wrong as it is possible to differentiate between integers and strings in the old media library.
