--- a/0-/Collections 2.0/TODO.mediawiki
+++ b/0-/Collections 2.0/TODO.mediawiki
@@ -21,7 +21,7 @@ Cluster-list should have an order attribute, which would be a list of the same a
   }]
  }
 
-There might also be additional naming updates in the spec on [[Collections 2.0]] that hasn't been changed in the code yet.
+There might also be additional naming updates in the spec on [[Collections 2.0]] that hasn't been changed in the code yet. The spec on the wiki should be considered the truth.
 
 == src/xmms/xform.c ==
 
