--- a/0-/Summer of Code 2011/Service Clients.mediawiki
+++ b/0-/Summer of Code 2011/Service Clients.mediawiki
@@ -1,4 +1,6 @@
-== A libxmmsclient-sc sketch ==
+== Client-side sketches ==
+
+=== A libxmmsclient-sc sketch ===
 This is a Service Client sketch illustrating some of the new ideas we had for a libxmmsclient-sc.
 
 <pre>
@@ -149,17 +151,28 @@ main (int argc, char **argv)
 }
 </pre>
 
-== First lower level sketch by nesciens ==
+=== First lower level sketch by nesciens ===
 This first sketch illustrates some ideas for the contents of a client-to-client message, a callback for service clients to receive calls and method dispatching:
 
 [http://e5239963acab7c70.paste.se/ some service client sketch or something]
 
-== nano-'s broken approach ==
+=== nano-'s broken approach ===
 This other sketch adheres more strictly to the idea of using broadcasts to communicate between clients. Doesn't allow synchronous communication.
 
 [http://8d0939b7f618e224.paste.se/]
 
-== Second sketch by nesciens ==
+=== Second sketch by nesciens ===
 A sketch of the changes needed in libxmmsclient and the basic idea behind libxmmsclient-sc.
 
 [http://2af7060654a0a0b9.paste.se/ another sc sketch or something]
+
+== Server-side sketches ==
+
+=== Implement message-passing in ipc.c ===
+It seems to be simpler and cleaner to implement message-passing between the clients through the server in ipc.c rather than creating a new object.
+
+This could be accomplished by storing client ids in the corresponding xmms_ipc_client_t and adding a new command (XMMS_IPC_CMD_C2C_MSG) to the XMMS_IPC_OBJECT_SIGNAL, which, in process_msg, would be processed by calling a new method xmms_ipc_c2c_msg_write.
+
+This xmms_ipc_c2c_msg_write method would locate and contact the destination client by searching for the client with the destination id (which should also be registered for a c2c broadcast in the regular way) in much the same way it happens in xmms_ipc_broadcast_cb.
+
+If the message expects a reply, its cookie should be stored in a pending pool of client-to-client messages so that the caller can be notified when the answer arrives.
